--- a/index.css
+++ b/index.css
@@ -9,9 +9,15 @@ html{
     height: 100%;
 }
 
+a {
+    text-decoration: none;
+    color :  #D7E1E1;
+ }
+
 body {
     min-width: 800px;
-    min-height: 100%;
+    height: 100%;
+    overflow: hidden;
     margin: 0px;
     background: linear-gradient( #212121, #0F0F0F);
     display: flex;
@@ -27,6 +33,8 @@ nav  {
 main {
     width: 100%;
     height: inherit;
+    padding: 30px;
+    overflow: scroll;
 }
 
 .nav-outter{
@@ -70,6 +78,11 @@ main {
     align-items: center;
 }
 
+.nav-item:hover > span{
+    transition-duration: 0.5s;
+    color: #212121;
+}
+
 .nav-item > span{
     margin: 10px;
 }
@@ -91,13 +104,22 @@ main {
     margin: 10px;
 }
 
+.footer-item:hover > span {
+    transition-duration: 0.5s;
+    color: #212121;
+}
+
 .material-symbols-outlined{
     font-size: 25pt;
     color: #D7E1E1;
 }
 
-#plain-text {
+.link-text {
     color: #D7E1E1;
-    font-size: 15pt;
 }
+
+#plane-text {
+    color: #D7E1E1;
+}
+
 
