--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-/* @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css'); */
+@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
 
 
 * { 
@@ -80,7 +80,7 @@ main {
 
 .nav-item:hover > span{
     transition-duration: 0.5s;
-    color: #212121;
+    color: #5c5c5c;
 }
 
 .nav-item > span{
@@ -106,7 +106,7 @@ main {
 
 .footer-item:hover > span {
     transition-duration: 0.5s;
-    color: #212121;
+    color: #5c5c5c;
 }
 
 .material-symbols-outlined{
@@ -122,4 +122,47 @@ main {
     color: #D7E1E1;
 }
 
+#login-div {
+    /* display: none; */
+    background-color: #1e1e1e;
+    margin: 20px;
+    display: flex;
+    flex-direction: row;
+    border-style: solid;
+    border-radius: 15px;
+    border-color: #302c2d;
+    border-width: 1px;
+    
+}
+
+#login-form{
+    display: flex;
+    flex-direction: row;
+    padding: 20px;
+    align-items: center;
+}
+
+#input-div> input{
+    width: 150px;
+    margin: 5px;
+    border-style: solid;
+    background-color: #BDBDBD;
+    color: #1e1e1e;
+    box-shadow: none;
+    outline: none;
+    border-radius: 5px;
+    appearance: none;
+}
+
+#input-btn{
+    color: #D7E1E1;
+    width: 100%;
+    height: 50px;
+    border-style: solid;
+    border-radius: 5px;
+    border-width: 1px;
+    background-color: #232329;
+    border-color: #7a7878;
+
+}
 
