--- a/main.css
+++ b/main.css
@@ -53,28 +53,44 @@
 
 
 #movie {
-    max-width: 230px;
-    min-width: 200px;
-    max-height: 310px;
-    min-height: 280px;
-    margin: 15px;
+    width: 260px;
+    height: 350px;
+    margin: 10px;
     background: linear-gradient(#2f2f2f,#212121);
     border-radius: 15px;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
 }
 
-#movie-elem {
-    width: i;
-    height: inherit;
-    background-size: 100%;
+.movie{
+    min-width: 250px;
+    min-height: 330px;
+    max-width: 275px;
+    max-height: 363px;
+    background: linear-gradient(#2f2f2f,#212121);
     border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    border: 10px;
+}
+
+.movie >  img {
+    border-radius: 15px;
+    width: 90%;
+    height: 70%;
+}
+
+#movie:hover {
+    opacity: 0.7;
+    transition-duration: 0.5s;
 }
 
 #movie-info{
-    position: absolute;
+    position: inherit;
     width: 230px;
     height: 310px;
     border-radius: 15px;
@@ -82,33 +98,16 @@
     flex-direction: column;
     align-items: baseline;
     justify-content: flex-end;
-    opacity: 0;
-}
-
-#movie-info:hover {
-    transition-duration: 0.5s;
     opacity: 1;
 }
 
-#movie-info:hover  {
-    transition-duration: 0.5s;
-    opacity: 0.3;
-}
-
-img {
-    position:relative;
-    width: inherit;
-    height: inherit;
-    object-fit: cover;
-    border-radius: 15px;
-}
-
-a {
+#movie> img {
    text-decoration: none;
-   color :  #D7E1E1;
    border-radius: 15px;
+   position: inherit;
 }
 
-.movie-info {
+#movie-info > p {
     font-size: 5pt;
+    color: #D7E1E1;
 }
