--- a/bookmark.css
+++ b/bookmark.css
@@ -42,10 +42,10 @@ a{
     margin: 0px;
     padding: 0px;
 }
-
+/* 
 #bookmarkContainer div {
-    /* border: red 1px solid; */
-}
+
+} */
 
 #bookmarkContainer {
     width:100%;
@@ -59,10 +59,6 @@ a{
   'GRAD' 0,
   'opsz' 48
 }
-
-/* div {
-    border: red solid 1px;
-} */
 
 /* -------------------툴바-------------------- */
 #markedContainer {
@@ -163,10 +159,6 @@ a{
     z-index:1;
     color:#D7E1E1;
     opacity: 0;
-}
-
-.movieItem .noMark {
-    visibility: hidden;
 }
 
 
