--- a/detailpage.css
+++ b/detailpage.css
@@ -1,34 +1,23 @@
-/* * {
-    margin: auto;
-    
-}  */
 
 #wrap {
-    width:80%;
-    height: auto;
-    margin: auto;
-	/* text-align:center; */ 
-	/* min-width: 70%; */
-	/* border: red 1px solid; */
-    min-width: 800px;
-    /* overflow: scroll; */
+    width:1280px;
+    margin: 0 auto;
+    min-width: 500px;
+    overflow: auto;
 }
 
 #wrap div {
     /* border: red 1px solid; */
-    
 } 
 
 
 #information {
-    
     height: 25%;
     display: flex;
     flex-direction: row;
     margin: 55px;
     margin-left: 0;
     margin-right: 0;
-    
 }
 
 
@@ -36,56 +25,40 @@
     width: 30%;
     display: flex;
     height: 25%;
-    /* padding: 55px; */
-    /* margin: 20px; */
     margin-left: 0;
-    
 }
 
 #infoBox2 {
     width: 70%;
     height: 25%;
     margin: auto;
-    /* padding: 30px; */
     margin-left: 0;
-    
 }
 
 #mainposter {
-    /* display: block; */
-    /* width: 300px; */
     width: 80%;
     height: auto;
-    /* border: 2px solid blue; */
     border-radius: 15px;
-    /* min-height: 80%; */
-    
 }
 
 #infoDetail {
     height: 100%;
     color: white;
-    
 }
 
 
 #story {
-    
     height: 80%;
     color: white;
-    /* margin: 55px; */
-    
 }
 
 #storyBox {
     height: 80%;
-    /* padding: 60px; */
     margin-left: 0;
 }
 
 
 #trailer {
-    /* height: 50%; */
     margin: 80px;
     border-radius: 20px;
     border: 2px solid ivory;
@@ -93,65 +66,48 @@
 
 #trailerName h3{
     height: auto;
-    /* text-align: center; */
     color: white;
-    /* border: 2px solid blue; */
-    
     margin: 0;
     padding: 25px;
 }
 
 #trailerBox {
-    /* height: 80%; */
     display: flex;
     flex-direction: row;
     width: 100%;
-    /* margin: auto; */
-    
-    
 }
 
 #trailerBox div {
     width: 33%;
-    /* padding: 20px; */
     margin-right: 10px;
     margin-left: 10px;
-    /* border: 2px solid blue; */
     height: 100%;
 }
 
 #trailerBox div iframe {
     width: 100%;
-    
 }
 
 
 #stillcut {
-    
     height: 30%;
     margin: 80px;
-    
-
 }
 
 #stillcutBox {
     width:880px;
-	
 	overflow:hidden;
     margin:  auto;
-    
 }
 
 #slide {
     position:relative;
 	width:4400px;
-    
 }
 
 .stillCutImg {
     float: left;
 	width:880px;
-    /* border: 2px solid blue; */
     height: 600px;
 }
 
@@ -167,21 +123,15 @@
 
 #comment {
     height: 20%;
-    
 }
 
 #commentName {
     height: 20%;
     color: violet;
-    
-    
 }
 
 #commentBox {
     height: 80%;
-    /* float: left; */
-    /* margin: auto; */
-    /* padding: 20px; */
     margin-top: 20px;
     margin-left: 0;
     margin-bottom: 55px;
@@ -190,22 +140,26 @@
 #commentDetail {
     width: 90%;
     height: 45px;
-    /* border-color: black; */
     border-radius: 15px;
 }
 
 #movieImg {
-    /* width: 60%; */
-    /* border: 2px solid blue; */
-    /* margin: auto; */
     margin-left: 3%;
-    /* margin-right: 10%; */
-    /* min-width: 800px; */
-
 }
 
 
 
+#commentBtn {
+    width: 80px;
+    height: 45px;
+    border-radius: 10px;
+    float:right;
+}
+
+#commentBtn img {
+    width: 100%;
+    height: 100%;
+}
 
 
 
