--- a/main.css
+++ b/main.css
@@ -68,37 +68,43 @@
     min-width: 250px;
     min-height: 330px;
     max-width: 275px;
-    max-height: 363px;
+    max-height: 400px;
+    padding: 10px;
     background: linear-gradient(#2f2f2f,#212121);
     border-radius: 15px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     border: 10px;
+    margin: 10px;
 }
 
 .movie >  img {
+    margin-top: 10px;
     border-radius: 15px;
     width: 90%;
-    height: 70%;
+
 }
 
-#movie:hover {
-    opacity: 0.7;
+.movie:hover {
+    opacity: 0.5;
     transition-duration: 0.5s;
 }
 
 #movie-info{
     position: inherit;
     width: 230px;
-    height: 310px;
     border-radius: 15px;
     display: flex;
-    flex-direction: column;
-    align-items: baseline;
-    justify-content: flex-end;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
     opacity: 1;
+
+}
+#movie-info > .material-symbols-outlined{
+    font-size: 25px;
 }
 
 #movie> img {
@@ -107,7 +113,6 @@
    position: inherit;
 }
 
-#movie-info > p {
-    font-size: 5pt;
+#movie-info > * {
     color: #D7E1E1;
 }
