--- a/detailpage.css
+++ b/detailpage.css
@@ -1,9 +1,14 @@
 
 #wrap {
-    width:1280px;
+    width:80%;
     margin: 0 auto;
     min-width: 500px;
     overflow: auto;
+    background-color: #1e1e1e;
+    border-radius: 25px;
+    border-width: 2px;
+    border-style: solid;
+    border-color: #3c3c3c;
 }
 
 #wrap div {
